# MadShooter

./: .gitignore  CMakeLists.txt  MadShooter.kdev4  README.md
.kdev4/: MadShooter.kdev4
Classes/: AppDelegate.cpp  AppDelegate.h  AppDelegate.hpp  BeamType.hpp  DamageLevel.hpp  DamagePowerUp.cpp  DamagePowerUp.hpp  EnergyPowerUp.cpp  EnergyPowerUp.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  HUDLayer.cpp  HUDLayer.hpp  HealthPowerUp.cpp  HealthPowerUp.hpp  LaserType.hpp  MenuScene.cpp  MenuScene.hpp  Missile.cpp  Missile.hpp  MobileControlLayer.cpp  MobileControlLayer.hpp  NewGameSinglePlayerScene.cpp  NewGameSinglePlayerScene.hpp  Player.cpp  Player.hpp  PlayerOne.cpp  PlayerOne.hpp  PlayerTwo.cpp  PlayerTwo.hpp  PowerUp.cpp  PowerUp.hpp  ScriptBot.cpp  ScriptBot.hpp  ShieldLevel.hpp  ShieldPowerUp.cpp  ShieldPowerUp.hpp  Ship.cpp  (+6 more)
Classes/lua/: CMakeLists.txt  llex.c  luaconf.h
Resources/: script.lua
Resources/bots/: BMO.lua  Nptr.lua  Tima.lua
Resources/ships/: shield2.png.old  shield3.png.old
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
proj.android/jni/: Android.mk  Application.mk
proj.ios_mac/MadShooter.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: MadShooter.sln
proj.win8.1-universal/: MadShooter.sln
proj.win8.1-universal/App.Shared/: MadShooter.Shared.vcxitems
proj.win8.1-universal/App.Windows/: MadShooter.Windows.vcxproj  MadShooter.Windows.vcxproj.filters  Package.appxmanifest
proj.win8.1-universal/App.WindowsPhone/: MadShooter.WindowsPhone.vcxproj  (+1 more)
(+10 files in other folders)
